--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,29 +15,27 @@ jobs:
         uses: actions/setup-node@v1.1.0
         with:
           version: 16.8 # see https://github.com/actions/setup-node#supported-version-syntax for supported versions
-        env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
           
       - name: Checkout branch
         uses: actions/checkout@v2
-        env:
+        with:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
           
       - name: Clean install dependencies
         run: npm ci # or yarn install --frozen-lockfile for yarn
         # if the above doesn't work, use npm i or yarn
-        env:
+        with:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
 
       - name: Build app
         run: npm run build
-        env:
+        with:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
           
       - name: deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.ACCESS_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-        env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
